--- a/index.html
+++ b/index.html
@@ -1,31 +1,2 @@
-    <form action="http://www.example.com/review.php" method ="get">
-      <fieldset>
-        <legend>
-          Please fill out your details:
-        </legend>
-        <label>
-          Name:
-          <input type="text" name="name" size="30" maxlength="100">
-        </label>
-        <br />
-        <label>
-          Email:
-          <input type="email" name="email" size="30" maxlength="100">
-        </label>
-        <br />
-        <label for="visiting">
-          What is your reasion for visiting this page?
-        </label>
-        <select name="referrer" id="visiting">
-          <option value="employer">Employer</option>
-          <option value="professor">Professor</option>
-          <option value="student">Student</option>
-          <option value="other">Other</option>
-        </select>
-        <br />
-        <button>
-          <img alt="submit-information" width="10" height="10" />
-            Submit Information
-        </button>
-      </fieldset>
-    </form>
+<h1><center> Jamie Clark </center> </h1>
+
