--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <h1><center> 
-  Jamie Clark 
+  Jamie Clark </h1>
   <img scr="IMG_2895.jpg" alt="selfie" width="300" height="300">
-  </center> </h1>
+  </center> 
 
