--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h1><center> 
   Jamie Clark </h1>
-  <img scr="IMG_2895.jpg" alt="selfie" width="300" height="300">
+  <img src="IMG_2895.jpg" alt="selfie" width="300" height="300">
   <hb />
   </center> 
 
