--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
-<h1><center> 
-  Jamie Clark </h1>
-  <img src="IMG_2895.jpg" alt="selfie" width="1333" height="2000">
-  <hb />
+<h1>
+  <center> 
+  Jamie Clark 
   </center> 
+</h1>    
+  <center>
+    <img src="IMG_2895.jpg" alt="selfie" width="1333" height="2000">
+  </center> 
+    <hb />
+   
 
