--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<body style="background-color:powderblue;">
 <h1>
   <center> 
   Jamie Clark 
@@ -7,5 +8,6 @@
     <img src="IMG_2895.jpg" alt="selfie" width="333.25" height="500">
   </center> 
     <hb />
+</body>
    
 
