--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
  
   <center>
     <img src="IMG_2895.jpg" alt="selfie" width="249.9375" height="375">
+    <img scr="IMG_2894.JPG" alt="selfie" width="249.9375" height="375">
   </center> 
 
   <h1>
