--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <img src="IMG_2893.JPG" alt="selfie" width="249.9375" height="375">
   </center> 
 
-  <h1>
+  <h1 style="color:white;">
   <center> 
   Jamie Clark 
    <hr>
