--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<body style="background-color:lightgray;">
+<body style="background-color:lightteal;">
  
   <center>
-    <img src="IMG_2895.jpg" alt="selfie" width="249.9375" height="375">
+    <img src="IMG_2892.JPG" alt="selfie" width="249.9375" height="375">
     <img src="IMG_2896.JPG" alt="selfie" width="249.9375" height="375">
     <img src="IMG_2891.JPG" alt="selfie" width="249.9375" height="375">
   </center> 
