--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<body style="background-color:lightteal;">
+<body style="background-color:lightcoral;">
  
   <center>
     <img src="IMG_2892.JPG" alt="selfie" width="249.9375" height="375">
@@ -12,8 +12,9 @@
    <hr>
   </center> 
 </h1> 
- <h3> <strong> About me : </strong> </h3>
+ <h3> <center> <strong> ABOUT ME  </strong> <center> </h3>
  
+ <p> <center> Hello there! I'm Jamie, a 23 year old Computer Science and Mathematics major at Liberty University in Lynchburg Virginia focusing in <em> Cyber Security </em>. My passion for coding is new but strong. Before transferring to Liberty I began my education at Cuesta College in San Luis Obispo California (<em> Yup, I am West Coast gal on the East Coast! </em>), this is where I was introduced to coding. At Cuesta I also discovered my love for tutoring mathematics, from one-on-one to group supplemental instruction workshops ranging from topics in basic arithmetic to precalculus and everything in between. </center> </p>
 </body>
    
 
