--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<body style="background-color:goldenrod;">
+<body style="background-color:darkgoldenrod;">
  
   <center>
     <img src="IMG_2892.JPG" alt="selfie" width="249.9375" height="375">
