--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<body style="background-color:darkgoldenrod;">
- 
+<body>
+ <div class="box gold">
   <center>
     <img src="IMG_2892.JPG" alt="selfie" width="249.9375" height="375">
     <img src="IMG_2896.JPG" alt="selfie" width="249.9375" height="375">
@@ -12,9 +12,31 @@
    <hr>
   </center> 
 </h1> 
- <h3> <center> <strong> ABOUT ME  </strong> <center> </h3>
+ </div>
+ <div class="box green"> </div>
+ <h3 style="color:white;"> <center> <strong> ABOUT ME  </strong> <center> </h3>
  
- <p> <center> Hello there! I'm Jamie, a 23 year old Computer Science and Mathematics major at Liberty University in Lynchburg Virginia focusing in <em> Cyber Security </em>. My passion for coding is new but strong. Before transferring to Liberty I began my education at Cuesta College in San Luis Obispo California (<em> Yup, I am West Coast gal on the East Coast! </em>), this is where I was introduced to coding. At Cuesta I also discovered my love for tutoring mathematics, from one-on-one to group supplemental instruction workshops ranging from topics in basic arithmetic to precalculus and everything in between. </center> </p>
-</body>
+ <p style="color:white;"> <center> Hello there! I'm Jamie, a 23 year old Computer Science and Mathematics major at Liberty University in Lynchburg Virginia focusing in <em> Cyber Security </em>. My passion for coding is new but strong. Before transferring to Liberty I began my education at Cuesta College in San Luis Obispo California (<em> Yup, I am West Coast gal on the East Coast! </em>), this is where I was introduced to coding. At Cuesta I also discovered my love for tutoring mathematics, from one-on-one to group supplemental instruction workshops ranging from topics in basic arithmetic to precalculus and everything in between. </center> </p>
+<hr>
+  <div class="box darkblue">
+  
+  </div>
+  <hr>
+  
+  .box{
+	width:100px;
+	height:100px;
+}
+ 
+.gold{
+	background:#B8860B;
+}
+.green{
+	background:#808000;
+}
+.dakrblue{
+	background:#191970;
+}
+  </body>
    
 
