--- a/index.html
+++ b/index.html
@@ -1,4 +1,22 @@
 <body>
+ <style>
+	   .box{
+	width:100px;
+	height:100px;
+}
+ 
+.gold{
+	background:#B8860B;
+}
+.green{
+	background:#808000;
+}
+.dakrblue{
+	background:#191970;
+}
+	</style>
+	 
+		
  <div class="box gold">
   <center>
     <img src="IMG_2892.JPG" alt="selfie" width="249.9375" height="375">
@@ -23,20 +41,7 @@
   </div>
   <hr>
   
-  .box{
-	width:100px;
-	height:100px;
-}
- 
-.gold{
-	background:#B8860B;
-}
-.green{
-	background:#808000;
-}
-.dakrblue{
-	background:#191970;
-}
+
   </body>
    
 
