--- a/index.html
+++ b/index.html
@@ -1,45 +1,40 @@
 <body>
- <style type = "text/css">
-.box{
-	width:100px;
-	height:100px;
-}
- 
-.gold{
-	background:#B8860B;
-}
-.green{
-	background:#808000;
-}
-.dakrblue{
-	background:#191970;
-}
-	</style>
-	 
+	<title>Jamie Clark</title>
 		
- <div class="box gold">
+<!-- Selfies -->
+	
   <center>
     <img src="IMG_2892.JPG" alt="selfie" width="249.9375" height="375">
     <img src="IMG_2896.JPG" alt="selfie" width="249.9375" height="375">
     <img src="IMG_2891.JPG" alt="selfie" width="249.9375" height="375">
   </center> 
-
-  <h1 style="color:white;">
-  <center> 
+	
+<!-- Name header -->
+	
+  <h1 style="color:white;"> <center> 
   Jamie Clark 
-   <hr>
-  </center> 
-</h1> 
- </div>
- <div class="box green"> </div>
+  </center> </h1> 
+	
+	<h4 style="color:white;"> <center>
+	Liberty University Class of 2022. Computer Science: Cyber Security & Mathematics major.
+		<hr> </center> </h4>
+
+<!-- About Me Section -->
+	
  <h3 style="color:white;"> <center> <strong> ABOUT ME  </strong> <center> </h3>
  
- <p style="color:white;"> <center> Hello there! I'm Jamie, a 23 year old Computer Science and Mathematics major at Liberty University in Lynchburg Virginia focusing in <em> Cyber Security </em>. My passion for coding is new but strong. Before transferring to Liberty I began my education at Cuesta College in San Luis Obispo California (<em> Yup, I am West Coast gal on the East Coast! </em>), this is where I was introduced to coding. At Cuesta I also discovered my love for tutoring mathematics, from one-on-one to group supplemental instruction workshops ranging from topics in basic arithmetic to precalculus and everything in between. </center> </p>
-<hr>
-  <div class="box darkblue">
-  
-  </div>
-  <hr>
+ <p style="color:white;"> <center> 
+	 Hello there! I'm Jamie, a 23 year old Computer Science and Mathematics major at Liberty University in Lynchburg Virginia focusing in Cyber Security. My passion for coding is new but strong. Before transferring to Liberty I began my education at Cuesta College in San Luis Obispo California (<em> Yup, I am West Coast gal on the East Coast! </em>), this is where I was introduced to coding. At Cuesta I also discovered my love for tutoring mathematics, from one-on-one to group supplemental instruction workshops ranging from topics in basic arithmetic to precalculus and everything in between. 
+</center> </p> <hr>
+	 
+<!-- Skills & Tools Section -->
+
+<!-- Projects -->
+	 
+<!-- Experience -->
+	 
+<!-- Reviews (Letters of Recommendation) -->
+
   
 
   </body>
