--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<body>
+<body style="background-color:darkgoldenrod;">
 	<title>Jamie Clark</title>
 		
 <!-- Selfies -->
@@ -23,9 +23,9 @@
 	
  <h3 style="color:white;"> <center> <strong> ABOUT ME  </strong> <center> </h3>
  
- <p style="color:white;"> <center> 
+ <h5 style="color:white;"> <center> 
 	 Hello there! I'm Jamie, a 23 year old Computer Science and Mathematics major at Liberty University in Lynchburg Virginia focusing in Cyber Security. My passion for coding is new but strong. Before transferring to Liberty I began my education at Cuesta College in San Luis Obispo California (<em> Yup, I am West Coast gal on the East Coast! </em>), this is where I was introduced to coding. At Cuesta I also discovered my love for tutoring mathematics, from one-on-one to group supplemental instruction workshops ranging from topics in basic arithmetic to precalculus and everything in between. 
-</center> </p> <hr>
+</center> </h5> <hr>
 	 
 <!-- Skills & Tools Section -->
 
