--- a/index.html
+++ b/index.html
@@ -28,12 +28,24 @@
 </center> </h5> <hr>
 	 
 <!-- Skills & Tools Section -->
+	  
+<h3 style="color:white;"> <center> <strong> SKILLS & TOOLS </strong> <center> </h3>
+	<hr>
 
 <!-- Projects -->
+	
+<h3 style="color:white;"> <center> <strong> PROJECTS  </strong> <center> </h3>
+	<hr>
 	 
 <!-- Experience -->
+	
+<h3 style="color:white;"> <center> <strong> EXPERIENCE  </strong> <center> </h3>
+	<hr>
 	 
 <!-- Reviews (Letters of Recommendation) -->
+	
+<h3 style="color:white;"> <center> <strong> REVIEWS  </strong> <center> </h3>
+	<hr>
 
   
 
