--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 	
  <h3 style="color:white;"> <center> <strong> ABOUT ME  </strong> <center> </h3>
  
- <h5 style="color:white;"> <center> 
+ <p> <font color="white"> <center> 
 	 Hello there! I'm Jamie, a 23 year old Computer Science and Mathematics major at Liberty University in Lynchburg Virginia focusing in Cyber Security. My passion for coding is new but strong. Before transferring to Liberty I began my education at Cuesta College in San Luis Obispo California (<em> Yup, I am West Coast gal on the East Coast! </em>), this is where I was introduced to coding. At Cuesta I also discovered my love for tutoring mathematics, from one-on-one to group supplemental instruction workshops ranging from topics in basic arithmetic to precalculus and everything in between. 
-</center> </h5> <hr>
+	 </center> </font> </h5> <hr>
 	 
 <!-- Skills & Tools Section -->
 	  
