--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
  <h3 style="color:white;"> <center> <strong> ABOUT ME  </strong> <center> </h3>
  
  <p> <font color="white"> <center> 
-	 Hello there! I'm Jamie, a 23 year old Computer Science and Mathematics major at Liberty University in Lynchburg Virginia focusing in Cyber Security.<br> My passion for coding is new but strong. Before transferring to Liberty I began my education at Cuesta College in San Luis Obispo California (<em> Yup, I am West Coast gal on the East Coast! </em>), this is where I was introduced to coding. At Cuesta I also discovered my love for tutoring mathematics, from one-on-one to group supplemental instruction workshops ranging from topics in basic arithmetic to precalculus and everything in between. 
+	 Hello there! I'm Jamie, a 23 year old Computer Science and Mathematics major at Liberty University in Lynchburg Virginia focusing in Cyber Security.<br> My passion for coding is new but strong. Before transferring to Liberty I began my education at Cuesta College in <br>San Luis Obispo California (<em> Yup, I am West Coast gal on the East Coast! </em>), this is where I was introduced to coding. At Cuesta I also discovered my love for <br>tutoring mathematics, from one-on-one to group supplemental instruction workshops ranging from topics in basic arithmetic to precalculus and everything in between. 
 	 </center> </font> </h5> <hr>
 	 
 <!-- Skills & Tools Section -->
