--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
-<body style="background-color:darkgoldenrod;">
+<body>
 	<title>Jamie Clark</title>
 		
 <!-- Selfies -->
-	
+
+<div  style="background-color:darkgoldenrod;">
   <center>
     <img src="IMG_2892.JPG" alt="selfie" width="249.9375" height="375">
     <img src="IMG_2896.JPG" alt="selfie" width="249.9375" height="375">
@@ -19,6 +20,7 @@
 	Liberty University Class of 2022. Computer Science: Cyber Security & Mathematics major.
 		<hr> </center> </h4>
 
+	</div>
 <!-- About Me Section -->
 	
  <h3 style="color:white;"> <center> <strong> ABOUT ME  </strong> <center> </h3>
