--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <body>
+	<head>
+		<style>
+			body {background-color="black"}
+		</style>
+	</head>
 	<title>Jamie Clark</title>
 		
 <!-- Selfies -->
