--- a/index.html
+++ b/index.html
@@ -1,14 +1,9 @@
 <body>
-	<head>
-		<style>
-			body {background-color="black"}
-		</style>
-	</head>
 	<title>Jamie Clark</title>
 		
 <!-- Selfies -->
 
-<div  style="background-color:darkgoldenrod;">
+<div  style="background-color:gray;">
   <center>
     <img src="IMG_2892.JPG" alt="selfie" width="249.9375" height="375">
     <img src="IMG_2896.JPG" alt="selfie" width="249.9375" height="375">
@@ -28,7 +23,7 @@
 	</div>
 <!-- About Me Section -->
 	
-<div  style="background-color:olive;">
+<div  style="background-color:darkgray;">
  <h3 style="color:white;"> <center> <strong> ABOUT ME  </strong> <center> </h3>
  
  <p> <font color="white"> <center> 
@@ -38,28 +33,28 @@
 	
 <!-- Skills & Tools Section -->
 	  
-<div  style="background-color:midnightblue;">
+<div  style="background-color:silver;">
 <h3 style="color:white;"> <center> <strong> SKILLS & TOOLS </strong> <center> </h3>
 	<hr>
 	</div>
 
 <!-- Projects -->
 	
-<div  style="background-color:palevioletred;">
+<div  style="background-color:lightgray;">
 <h3 style="color:white;"> <center> <strong> PROJECTS  </strong> <center> </h3>
 	<hr>
 	</div>
 	 
 <!-- Experience -->
 	
-<div  style="background-color:mistyrose;">
+<div  style="background-color:gainsboro;">
 <h3 style="color:white;"> <center> <strong> EXPERIENCE  </strong> <center> </h3>
 	<hr>
 	</div>
 	 
 <!-- Reviews (Letters of Recommendation) -->
 	
-<div  style="background-color:lightgray;">
+<div  style="background-color:whitesmoke;">
 <h3 style="color:white;"> <center> <strong> REVIEWS  </strong> <center> </h3>
 	<hr>
 	</div>
