--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		
 <!-- Selfies -->
 
-<div  style="background-color:gray;">
+<div  style="padding:50px; background-color: #808080;">
   <center>
     <img src="IMG_2892.JPG" alt="selfie" width="249.9375" height="375">
     <img src="IMG_2896.JPG" alt="selfie" width="249.9375" height="375">
@@ -23,7 +23,7 @@
 	</div>
 <!-- About Me Section -->
 	
-<div  style="background-color:darkgray;">
+<div  style="padding:50px; background-color:#A9A9A9;">
  <h3 style="color:white;"> <center> <strong> ABOUT ME  </strong> <center> </h3>
  
  <p> <font color="white"> <center> 
@@ -33,28 +33,28 @@
 	
 <!-- Skills & Tools Section -->
 	  
-<div  style="background-color:silver;">
+<div  style="padding: 50px; background-color:#C0C0C0;">
 <h3 style="color:white;"> <center> <strong> SKILLS & TOOLS </strong> <center> </h3>
 	<hr>
 	</div>
 
 <!-- Projects -->
 	
-<div  style="background-color:lightgray;">
+<div  style="padding: 50px; background-color:#D3D3D3;">
 <h3 style="color:white;"> <center> <strong> PROJECTS  </strong> <center> </h3>
 	<hr>
 	</div>
 	 
 <!-- Experience -->
 	
-<div  style="background-color:gainsboro;">
+<div  style="padding: 50px; background-color:#DCDCDC;">
 <h3 style="color:white;"> <center> <strong> EXPERIENCE  </strong> <center> </h3>
 	<hr>
 	</div>
 	 
 <!-- Reviews (Letters of Recommendation) -->
 	
-<div  style="background-color:whitesmoke;">
+<div  style="padding: 50px; background-color:#F5F5F5;">
 <h3 style="color:white;"> <center> <strong> REVIEWS  </strong> <center> </h3>
 	<hr>
 	</div>
