--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	
 	<h4 style="color:white;"> <center>
 	Liberty University Class of 2022. Computer Science: Cyber Security & Mathematics major.
-		<hr> </center> </h4>
+		</center> </h4>
 
 	</div>
 <!-- About Me Section -->
@@ -28,35 +28,31 @@
  
  <p> <font color="white"> <center> 
 	 Hello there! I'm Jamie, a 23 year old Computer Science and Mathematics major at Liberty University in Lynchburg Virginia focusing in Cyber Security.<br> My passion for coding is new but strong. Before transferring to Liberty I began my education at Cuesta College in <br>San Luis Obispo California (<em> Yup, I am West Coast gal on the East Coast! </em>), this is where I was introduced to coding. At Cuesta I also discovered my love for <br>tutoring mathematics, from one-on-one to group supplemental instruction workshops ranging from topics in basic arithmetic to precalculus and everything in between. 
-	 </center> </font> </h5> <hr>
+	 </center> </font> </h5> 
 	 </div>
 	
 <!-- Skills & Tools Section -->
 	  
 <div  style="padding: 50px; background-color:#C0C0C0;">
 <h3 style="color:white;"> <center> <strong> SKILLS & TOOLS </strong> <center> </h3>
-	<hr>
 	</div>
 
 <!-- Projects -->
 	
 <div  style="padding: 50px; background-color:#D3D3D3;">
 <h3 style="color:white;"> <center> <strong> PROJECTS  </strong> <center> </h3>
-	<hr>
 	</div>
 	 
 <!-- Experience -->
 	
 <div  style="padding: 50px; background-color:#DCDCDC;">
 <h3 style="color:white;"> <center> <strong> EXPERIENCE  </strong> <center> </h3>
-	<hr>
 	</div>
 	 
 <!-- Reviews (Letters of Recommendation) -->
 	
 <div  style="padding: 50px; background-color:#F5F5F5;">
 <h3 style="color:white;"> <center> <strong> REVIEWS  </strong> <center> </h3>
-	<hr>
 	</div>
 
   
