--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		
 <!-- Selfies -->
 
-<div  style="padding:50px; background-color: #808080;">
+<div  style="padding:50px; background-color: #FFE4E1;">
   <center>
     <img src="IMG_2892.JPG" alt="selfie" width="249.9375" height="375">
     <img src="IMG_2896.JPG" alt="selfie" width="249.9375" height="375">
@@ -23,36 +23,36 @@
 	</div>
 <!-- About Me Section -->
 	
-<div  style="padding:50px; background-color:#A9A9A9;">
- <h3 style="color:white;"> <center> <strong> ABOUT ME  </strong> <center> </h3>
+<div  style="padding:50px; background-color:#FFFFFF;">
+ <h3> <center> <strong> ABOUT ME  </strong> <center> </h3>
  
- <p> <font color="white"> <center> 
+ <p> <center> 
 	 Hello there! I'm Jamie, a 23 year old Computer Science and Mathematics major at Liberty University in Lynchburg Virginia focusing in Cyber Security.<br> My passion for coding is new but strong. Before transferring to Liberty I began my education at Cuesta College in <br>San Luis Obispo California (<em> Yup, I am West Coast gal on the East Coast! </em>), this is where I was introduced to coding. At Cuesta I also discovered my love for <br>tutoring mathematics, from one-on-one to group supplemental instruction workshops ranging from topics in basic arithmetic to precalculus and everything in between. 
-	 </center> </font> </h5> 
+	 </center> </h5> 
 	 </div>
 	
 <!-- Skills & Tools Section -->
 	  
-<div  style="padding: 50px; background-color:#C0C0C0;">
-<h3 style="color:white;"> <center> <strong> SKILLS & TOOLS </strong> <center> </h3>
+<div  style="padding: 50px; background-color:#DAA520;">
+<h3> <center> <strong> SKILLS & TOOLS </strong> <center> </h3>
 	</div>
 
 <!-- Projects -->
 	
-<div  style="padding: 50px; background-color:#D3D3D3;">
-<h3 style="color:white;"> <center> <strong> PROJECTS  </strong> <center> </h3>
+<div  style="padding: 50px; background-color:#FFFFFF;">
+<h3> <center> <strong> PROJECTS  </strong> <center> </h3>
 	</div>
 	 
 <!-- Experience -->
 	
-<div  style="padding: 50px; background-color:#DCDCDC;">
-<h3 style="color:white;"> <center> <strong> EXPERIENCE  </strong> <center> </h3>
+<div  style="padding: 50px; background-color:#FFE4E1;">
+<h3> <center> <strong> EXPERIENCE  </strong> <center> </h3>
 	</div>
 	 
 <!-- Reviews (Letters of Recommendation) -->
 	
-<div  style="padding: 50px; background-color:#F5F5F5;">
-<h3 style="color:white;"> <center> <strong> REVIEWS  </strong> <center> </h3>
+<div  style="padding: 50px; background-color:#FFFFFF;">
+<h3> <center> <strong> REVIEWS  </strong> <center> </h3>
 	</div>
 
   
