--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 	
 <!-- Name header -->
 	
-  <h1 style="color:white;"> <center> 
+  <h1 style="color:goldenrod;">  <center> 
   Jamie Clark 
-  </center> </h1> 
+	  </center> </h1> 
 	
-	<h4 style="color:white;"> <center>
+	<h4 style="color:goldenrod;"> <center>
 	Liberty University Class of 2022. Computer Science: Cyber Security & Mathematics major.
 		</center> </h4>
 
