--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	
 <!-- Name header -->
 	
-  <h1 style="color: goldenrod; font-family: fantasy, serif; font-size:72pt; font-style:italic"">  <center> 
+  <h1 style="color: goldenrod; font-family: fantasy; font-size:72pt; font-style:italic"">  <center> 
   Jamie Clark 
 	  </center> </h1> 
 	
