--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 
 <div  style="padding:50px; background-color: #FFE4E1;">
   <center>
-    <img src="IMG_2892.JPG" alt="selfie" width="249.9375" height="375">
-    <img src="IMG_2896.JPG" alt="selfie" width="249.9375" height="375">
+    <img src="IMG_2895.jpg" alt="selfie" width="249.9375" height="375">
     <img src="IMG_2891.JPG" alt="selfie" width="249.9375" height="375">
   </center> 
 	
