--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 	
 <!-- Name header -->
 	
-  <h1 style="color: goldenrod; font-family: fantasy; font-size:72pt; font-style:italic">  <center> 
+  <h1 style="color: white; font-family: fantasy; font-size:72pt; font-style:italic">  <center> 
   Jamie Clark 
 	  </center> </h1> 
 	
-	<h4 style="color:goldenrod;"> <center>
+	<h4 style="color:white;"> <center>
 	Liberty University Class of 2022. Computer Science: Cyber Security & Mathematics major.
 		</center> </h4>
 
