--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		
 <!-- Selfies -->
 
-<div  style="padding:50px; background-color: #FFE4E1;">
+<div  style="padding:50px; background-color: #365271;">
   <center>
     <img src="IMG_2895.jpg" alt="selfie" width="249.9375" height="375">
     <img src="IMG_2894.JPG" alt="selfie" width="249.9375" height="375">
@@ -32,7 +32,7 @@
 	
 <!-- Skills & Tools Section -->
 	  
-<div  style="padding: 50px; background-color:#DAA520;">
+<div  style="padding: 50px; background-color:#87A3BD;">
 <h3> <center> <strong> SKILLS & TOOLS </strong> <center> </h3>
 	</div>
 
@@ -44,7 +44,7 @@
 	 
 <!-- Experience -->
 	
-<div  style="padding: 50px; background-color:#FFE4E1;">
+<div  style="padding: 50px; background-color:#585D63;">
 <h3> <center> <strong> EXPERIENCE  </strong> <center> </h3>
 	</div>
 	 
