--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 <div  style="padding:50px; background-color:#FFFFFF;">
  <h3> <center> <strong> ABOUT ME  </strong> <center> </h3>
  
- <p style="margin: 5px;"> <center> 
-	 Hello there! I'm Jamie, a 23 year old Computer Science and Mathematics major at Liberty University in Lynchburg Virginia focusing in Cyber Security.<br> My passion for coding is new but strong. Before transferring to Liberty I began my education at Cuesta College in <br>San Luis Obispo California (<em> Yup, I am West Coast gal on the East Coast! </em>), this is where I was introduced to coding. At Cuesta I also discovered my love for <br>tutoring mathematics, from one-on-one to group supplemental instruction workshops ranging from topics in basic arithmetic to precalculus and everything in between. 
+ <p style="margin-top: 5px; margin-left: 200px; margin-right: 200px;"> <center> 
+	 Hello there! I'm Jamie, a 23 year old Computer Science and Mathematics major at Liberty University in Lynchburg Virginia focusing in Cyber Security. My passion for coding is new but strong. Before transferring to Liberty I began my education at Cuesta College in San Luis Obispo California (<em> Yup, I am West Coast gal on the East Coast! </em>), this is where I was introduced to coding. At Cuesta I also discovered my love for tutoring mathematics, from one-on-one to group supplemental instruction workshops ranging from topics in basic arithmetic to precalculus and everything in between. 
 	 </center> </h5> 
 	 </div>
 	
