--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 	</div>
 	
 <div  style="padding: 50px; background-color:#010000;">	
-	<h3 style="color: white; &hearts;"> <center> <strong> MADE WITH LOVE BY ME </strong> <center> </h3>
+	<h3 style="color: white;"> <center> <strong> MADE WITH <style="&hearts;"> BY ME </strong> <center> </h3>
 
   </body>
    
