--- a/index.html
+++ b/index.html
@@ -51,6 +51,12 @@
 <!-- Reviews (Letters of Recommendation) -->
 	
 <div  style="padding: 50px; background-color:#FFFFFF;">
+	<span style="font-size:300%;color:yellow;">&starf;</span>
+	<span style="font-size:300%;color:yellow;">&starf;</span>
+	<span style="font-size:300%;color:yellow;">&starf;</span>
+	<span style="font-size:300%;color:yellow;">&starf;</span>
+	<span style="font-size:300%;color:yellow;">&starf;</span>
+
 <h3> <center> <strong> REVIEWS  </strong> <center> </h3>
 	
 	<!-- Que's Letter -->
