--- a/index.html
+++ b/index.html
@@ -51,11 +51,13 @@
 <!-- Reviews (Letters of Recommendation) -->
 	
 <div  style="padding: 50px; background-color:#FFFFFF;">
+	<center>
 	<span style="font-size:300%;color:yellow;">&starf;</span>
 	<span style="font-size:300%;color:yellow;">&starf;</span>
 	<span style="font-size:300%;color:yellow;">&starf;</span>
 	<span style="font-size:300%;color:yellow;">&starf;</span>
 	<span style="font-size:300%;color:yellow;">&starf;</span>
+	</center>
 
 <h3> <center> <strong> REVIEWS  </strong> <center> </h3>
 	
