--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <h2> <center> <strong> REVIEWS  </strong> <center> </h2>
 	
 	<!-- Que's Letter -->
-	<p style="font-family: georgia; font-size:14pt; margin-top: 5px; margin-left: 350px; margin-right: 350px;"> <em><center> "I have known Jamie for over 2 years and consider her an excellent tutor and student. She is an amazing leader and advocate for students, always going the extra mile to support students and encouraging them to accomplish their educational and career goals.<br> Jamie has tutored within out Math Lab and is a lead expert in the subject areas of Elementary and Intermediate Algebra and students flock to her every day. In a field and work place that is traditionally dominated by males, she is a vital role model for other women who want to pursue education and careers in STEM fields. She has great attention to detail, endless patience, and a positive attitude every day she comes into the tutoring center and is an extremely dedication tutor and student. <br> As the Director of Student Equity and Success Centers, I oversee over 100 student tutors throughtout ther college in subjects ranging from math, english, sciences, and humanitites. Jamie is by far one of the best tutors the Student Success Centers have ever had. She played a role on our Tutor Mentors team, chosen because of their exemplary tutoring skills, commitment to student success, and strong leadership. She is an excellent role model to new tutors, helping build confidence, sharing key teaching strategies, and encouraging other students to never give up even when they are struggling. <br> Jamie is positive and generous, providing a welcoming attitude to all who meet her. She is a great collaborator who works well with other students, providing leadership, commitment, and passion for everything she does. She is a hard worker, quick learner, and will be an amazing addition to any team. <br> I highly recommend Jamie and believe she is an extraordinary member of our team and have complete confidence she will succeed in everything she does. </em><br> - <strong>Que Dang, MPH</strong><br>Director, Student Equity and Success Center<br>Cuesta College, San Luis Obispo</center>
+	<p style="font-family: georgia; font-size:14pt; margin-top: 5px; margin-left: 350px; margin-right: 350px;"> <em><center> "...Jamie is positive and generous, providing a welcoming attitude to all who meet her. She is a great collaborator who works well with other students, providing leadership, commitment, and passion for everything she does. She is a hard worker, quick learner, and will be an amazing addition to any team..." </em><br> - <strong>Que Dang, MPH</strong><br>Director, Student Equity and Success Center<br>Cuesta College, San Luis Obispo</center>
 		<center>
 	<span style="font-size:300%;color:yellow;">&starf;</span>
 	<span style="font-size:300%;color:yellow;">&starf;</span>
@@ -67,7 +67,7 @@
 		</p>
 	
 	<!-- Alysha's Letter -->
-	<p style="font-family: georgia; font-size:14pt; margin-top: 5px; margin-left: 350px; margin-right: 350px;"> <center><em>"I've had the pleasure of working with Jamie for the past year in the Cuesta College Student Success Center and am confident that she will be a valuable addition to your organization. Jamie differentiates herself from others by passionate dedication to performance excellence and exemplary interpersonal skills. <br>Whaterver your standard of excellence, Jamie will exceed your expectations. She has an uncanny ability to see ineffeciences and areas in need of improvement, as well as map out comprehensive solutions to resolve them. I appreciate her solution-oriented persepctive and communication syle. Her passion for high quality tutoring services and initiative helped our Studen Success Center become aware of gaps in new tutor training practices and her contributions were critical to the development of peer tutor mentoring program. Our center has benefited tremendously from her feedback and ideas. <br>Jamie's detail oriented project management and teamwork skill shave been an asset in two projects I have been involved with her on. She worked with her team of peer tutor mentors to develop and agenda and content for our first ever full-day tutor retreat and it was a huge success. Jamie created a unique and challenging ice breaker and team building activities that were so engaging the room was buzzing with excitement and laughter. It was one of the best retreats I have ever attended and I left feeling a bond and familiarity that changed and exponentially improved my connection witht the tutors in our center. Jamie has also been working on a long-term project to create an archive of course notes for the Math classes she has taken and been embedded in. While most would have made copies and thrown them into a bind, Jamie has meticulously recorded her notes in full color on an iPad, and formatted the documents into a PDF to be printed and spiral bound. With thoughtful planning, she incorporated blank sheets after each section to provide space for students to add their own thoughts and notes. Essentially, her ability to persist at a project over time with thoughtful consideration to detail created a legacy resource in the form of a class note library for every math class offered at Cuesta! Jamie operates at an admirable high level of proficiency in all endeavors. <br> - <strong>Alysha Nye</strong></em><br>Academic Success Coach<br>Student Success Center, Statistics Lab</center>
+	<p style="font-family: georgia; font-size:14pt; margin-top: 5px; margin-left: 350px; margin-right: 350px;"> <center><em>"...Whaterver your standard of excellence, Jamie will exceed your expectations. She has an uncanny ability to see ineffeciences and areas in need of improvement, as well as map out comprehensive solutions to resolve them. I appreciate her solution-oriented persepctive and communication syle..."<br> - <strong>Alysha Nye</strong></em><br>Academic Success Coach<br>Student Success Center, Statistics Lab</center>
 		<center>
 	<span style="font-size:300%;color:yellow;">&starf;</span>
 	<span style="font-size:300%;color:yellow;">&starf;</span>
@@ -79,7 +79,7 @@
   
 
 	<!-- Amanda's Letter -->
-	<p style="font-family: georgia; font-size:14pt; margin-top: 5px; margin-left: 350px; margin-right: 350px;"> <center><em>"Jamie Clark is the most driven, focused, and hard-working student I have ever had. She is detail oriented, organized, and incredibly responsible. I would trust Jamie with any task in any venue at any time and I know she would go above and beyond to get the job done. <br>I had the pleasure of teaching Jamie for two semesters at Cuesta College and watched her blossom and excel as a student. I then asked her to be my embedded tutor to sit in on my classes and help my students when they needed it. She is the only student I have had do this because she is the only one I trust 100%. She has been such an asset to my students' success. She plans extra review sessions on her own time, she creates games for my students to review their learning in a fun way, and she is approachable and helpful whenever needed. I can count on her for anything. Jamie has made my life so much easier as a teacher and made learning easier for my students! <br>Jamie will be graduating Cuesta College this semester and transferring to Liberty University with a double major in math and computer science. On top of this cross-country move and difficult academic load, she plans to work full time. If it were any other student, I may offer a word of warning about filling their schedules too full much, but with Jamie, I know she can handle this and shine. She has balanced working full time with a being a full time student currently earning a 3.8 GPA. <br>Lastly, I think most importantly, Jamie has a huge heart. She cares for others, is kind and respectful of all, and is incredibly thoughtful. When a student of mine passed away in a car accident, she brought colored paper and pens for classmates to make cards to send to the student's parents. She truly is an exceptional human being and any employee would be blessed to have her.</em><br> - <strong>Amanda Lombard</strong><br>Mathematics Professor<br>Cuesta College</center>
+	<p style="font-family: georgia; font-size:14pt; margin-top: 5px; margin-left: 350px; margin-right: 350px;"> <center><em>"...Jamie Clark is the most driven, focused, and hard-working student I have ever had. She is detail oriented, organized, and incredibly responsible. I would trust Jamie with any task in any venue at any time and I know she would go above and beyond to get the job done...Lastly, I think most importantly, Jamie has a huge heart. She cares for others, is kind and respectful of all, and is incredibly thoughtful..."</em><br> - <strong>Amanda Lombard</strong><br>Mathematics Professor<br>Cuesta College</center>
 		<center>
 	<span style="font-size:300%;color:yellow;">&starf;</span>
 	<span style="font-size:300%;color:yellow;">&starf;</span>
@@ -88,8 +88,35 @@
 	<span style="font-size:300%;color:yellow;">&starf;</span>
 	</center>
 	</p>
+	
+	
+	<!-- Shelby's Letter -->
+	<p style="font-family: georgia; font-size:14pt; margin-top: 5px; margin-left: 350px; margin-right: 350px;"> <em><center>"...Some tutors mean well, but are lacking the actual skill themselves. Not Jamie. The proof is in the pudding, and that particular class that Jamie tutored was my highest achieving PreCalculus course to date. I believe this to be because of Jamie’s help..."</em><br> - <strong>Shelby L. Burnett</strong><br>Mathematics Professor<br>Cuesta College</center>
+		<center>
+	<span style="font-size:300%;color:yellow;">&starf;</span>
+	<span style="font-size:300%;color:yellow;">&starf;</span>
+	<span style="font-size:300%;color:yellow;">&starf;</span>
+	<span style="font-size:300%;color:yellow;">&starf;</span>
+	<span style="font-size:300%;color:yellow;">&starf;</span>
+	</center>
+	</p>
+	
+	<!-- Siboney's Letter -->
+	<p style="font-family: georgia; font-size:14pt; margin-top: 5px; margin-left: 350px; margin-right: 350px;"> <em><center>"...Jamie is responsible, self-motivated and with a great attitude. She demonstrates skills at troubleshooting problems to determine solutions and excels in using available resources on campus..."</em><br> - <strong>Siboney Guardado</strong><br>Associate Director<br>Cuesta College</center>
+		<center>
+	<span style="font-size:300%;color:yellow;">&starf;</span>
+	<span style="font-size:300%;color:yellow;">&starf;</span>
+	<span style="font-size:300%;color:yellow;">&starf;</span>
+	<span style="font-size:300%;color:yellow;">&starf;</span>
+	<span style="font-size:300%;color:yellow;">&starf;</span>
+	</center>
+	</p>
+	
+	
+		
 	</div>
 	
+	<!-- Footer -->
 <div  style="padding: 50px; background-color:#010000;">	
 	<h5 style="color: white;"> <center> <strong> MADE WITH <span style="font-size:100%;color:white;">&hearts;</span> BY ME </strong> <center> </h5>
 
