--- a/index.html
+++ b/index.html
@@ -124,8 +124,7 @@
 	</p>
 	
 		<!-- Jen's Letter -->
-	<p style="font-family: georgia; font-size:14pt; margin-top: 5px; margin-left: 350px; margin-right: 350px;"> <em><center>"...Jamie stood out from the beginning. She was always prepared and ready to learn. Jamie would often ask questions during class and worked closely with her classmates during open math-lab hours. She consistently put in the time to master the material and performed well on exams. This is particularly impressive as she had been taking a full course load at two different campuses and worked full-time to supplement her educational and living expenses..."</em><br> - <strong>Jennifer M. Sanders-Moreno</strong><br>Mathematics Professor<br>Cuesta College</center>
-		<center><a href="Jamie_Clark_Letterofrec.pdf">read more</a><center>
+	<p style="font-family: georgia; font-size:14pt; margin-top: 5px; margin-left: 350px; margin-right: 350px;"> <em><center>"...Jamie stood out from the beginning. She was always prepared and ready to learn. Jamie would often ask questions during class and worked closely with her classmates during open math-lab hours. She consistently put in the time to master the material and performed well on exams. This is particularly impressive as she had been taking a full course load at two different campuses and worked full-time to supplement her educational and living expenses..."<center><a href="Jamie_Clark_Letterofrec.pdf">read more</a><center></em><br> - <strong>Jennifer M. Sanders-Moreno</strong><br>Mathematics Professor<br>Cuesta College</center>
 		<center>
 	<span style="font-size:300%;color:yellow;">&starf;</span>
 	<span style="font-size:300%;color:yellow;">&starf;</span>
