--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 	</p>
 	
 	<!-- Anna's Letter -->
-	<p style="font-family: georgia; font-size:14pt; margin-top: 5px; margin-left: 350px; margin-right: 350px;"> <em><center>"...Her ability to balance work and study will no doubt lead Jamie to success wherever she goes. I know she had a profession and, finding herself dissatisfied with her education, choose to pursue her education farther. I have great respect for her forbearance and strength..."</em><br> - <strong>Anna Kopcrak</strong><br>Mathematics Department<br>Cuesta College</center>
+	<p style="font-family: georgia; font-size:14pt; margin-top: 5px; margin-left: 350px; margin-right: 350px;"> <em><center>"...Her ability to balance work and study will no doubt lead Jamie to success wherever she goes. I know she had a profession and, finding herself dissatisfied with her education, choose to pursue her education farther. I have great respect for her forbearance and strength..."<center><a href="JamieClark_LetOfRecWORK.pdf">read more</a></center></em><br> - <strong>Anna Kopcrak</strong><br>Mathematics Department<br>Cuesta College</center>
 		<center>
 	<span style="font-size:300%;color:yellow;">&starf;</span>
 	<span style="font-size:300%;color:yellow;">&starf;</span>
@@ -124,7 +124,7 @@
 	</p>
 	
 		<!-- Jen's Letter -->
-	<p style="font-family: georgia; font-size:14pt; margin-top: 5px; margin-left: 350px; margin-right: 350px;"> <em><center>"...Jamie stood out from the beginning. She was always prepared and ready to learn. Jamie would often ask questions during class and worked closely with her classmates during open math-lab hours. She consistently put in the time to master the material and performed well on exams. This is particularly impressive as she had been taking a full course load at two different campuses and worked full-time to supplement her educational and living expenses..."<center><a href="Jamie_Clark_Letterofrec.pdf">read more</a><center></em><br> - <strong>Jennifer M. Sanders-Moreno</strong><br>Mathematics Professor<br>Cuesta College</center>
+	<p style="font-family: georgia; font-size:14pt; margin-top: 5px; margin-left: 350px; margin-right: 350px;"> <em><center>"...Jamie stood out from the beginning. She was always prepared and ready to learn. Jamie would often ask questions during class and worked closely with her classmates during open math-lab hours. She consistently put in the time to master the material and performed well on exams. This is particularly impressive as she had been taking a full course load at two different campuses and worked full-time to supplement her educational and living expenses..."<center><a href="Jamie_Clark_Letterofrec.pdf">read more</a></center></em><br> - <strong>Jennifer M. Sanders-Moreno</strong><br>Mathematics Professor<br>Cuesta College</center>
 		<center>
 	<span style="font-size:300%;color:yellow;">&starf;</span>
 	<span style="font-size:300%;color:yellow;">&starf;</span>
