--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 	</p>
 	
 	<!-- Siboney's Letter -->
-	<p style="font-family: georgia; font-size:14pt; margin-top: 5px; margin-left: 350px; margin-right: 350px;"> <em><center>"...Jamie is responsible, self-motivated and with a great attitude. She demonstrates skills at troubleshooting problems to determine solutions and excels in using available resources on campus..."</em><br> - <strong>Siboney Guardado</strong><br>Associate Director<br>Cuesta College</center>
+	<p style="font-family: georgia; font-size:14pt; margin-top: 5px; margin-left: 350px; margin-right: 350px;"> <em><center>"...Jamie is responsible, self-motivated and with a great attitude. She demonstrates skills at troubleshooting problems to determine solutions and excels in using available resources on campus..."<center><a href="letterofrec.pdf">read more</a></center></em><br> - <strong>Siboney Guardado</strong><br>Associate Director<br>Cuesta College</center>
 		<center>
 	<span style="font-size:300%;color:yellow;">&starf;</span>
 	<span style="font-size:300%;color:yellow;">&starf;</span>
